перенов файлов с черновика и добавление readme

--- a/index.html
+++ b/index.html
@@ -5,6 +5,142 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="/fonts/fonts.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
-  <body></body>
+  <body>
+
+    <!-- header -->
+
+    <header class="header">
+      <nav class="menu-otn">
+        <ul class="list-marker-header">
+          <li class="list-no-marker"><a href="#" class="font-list">главная</a></li>
+          <li><a href="#" class="font-list font-list__underlined">посмотреть лоты</a></li>
+          <li><a href="#" class="font-list font-list__underlined">об аукционе</a></li>
+        </ul>
+      </nav>
+
+      <a class="logo-otn">
+        <!-- <img src="/images/logo-black.svg" alt="логотип с изображением оно тебе надо"> -->
+      </a>
+
+      <address class="address-otn">
+        <p class="font-list font-list__underlined">+9 999 555 5555</p>
+        <p class="font-list font-list__underlined">info@sobaka.ge</p>
+        <p class="font-list">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+    </header>
+
+    <!-- main -->
+
+    <main class="main">
+
+      <!-- cover -->
+
+      <section class="cover">
+        <h2 class="">
+          <span class="">оно</span>
+          <span class="">тебе</span>
+          <span class="">надо</span>
+        </h2>
+        <div class="description">
+          <p>Аукцион вещей, вкоторые никто не верил</p>
+          <button class="btn-see-all-lots">сделать ставку</button>
+        </div>
+      </section>
+
+      <!-- lots-otn -->
+
+      <section class="lots-otn">
+        <h2 class="bold-title">лоты</h2>
+        <ul class="list-no-marker">
+          <li class="block-lots block-lots__film">
+            <a href="#">
+              <article class="">
+                <h2 class="">Фильм режиссёра, который бросил киношколу</h2>
+                <p class="font-main">Не просто бросил, а ушёл с первой лекции. 
+                  Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="block-lots block-lots__book">
+            <a href="#">
+              <article class="">
+                <h2 class="">Книга, где описан один скучный день из жизни рекламного агента</h2>
+                <p class="font-main">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
+                  В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
+                  И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="block-lots block-lots__picture">
+            <a href="#">
+              <article class="">
+                <h2 class="">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+                <p class="font-main">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
+                  Никаких полей, лесов, котиков... 
+                  Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+
+      <!-- about-lots -->
+
+        <a href="#" class="font-main font-list__underlined">Подробнее о лотах</a>
+      </section>
+
+      <!-- about-auction -->
+
+      <section class="about-auction">
+        <div>
+          <img src="/images/logo-white.svg" alt="белый логотип с изображением оно тебе надо">
+        </div>
+        <div>
+          <h2 class="bold-title">Об аукционе</h2>
+          <div>
+            <p class="font-main">Параграф 1.</p>
+            <p class="font-main">Параграф 2.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- footer -->
+
+    <footer class="footer">
+      <address class="address-otn">
+        <p class="font-list font-list__underlined">+9 999 555 5555</p>
+        <p class="font-list font-list__underlined">info@sobaka.ge</p>
+        <p class="font-list">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+
+      <!-- menu-footer -->
+
+      <div class="menu-footer">
+        <ul class="list-no-marker">
+          <li class="font-list">главная</li>
+          <li class="font-list font-list__underlined">посмотреть лоты</li>
+          <li class="font-list font-list__underlined">об аукционе</li>
+        </ul>
+      </div>
+
+      <!-- social-footer -->
+
+      <div class="social-footer">
+        <ul class="list-no-marker">
+          <li><a href="#" class=""></a></li>
+          <li><a href="#" class=""></a></li>
+          <li><a href="#" class=""></a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
