--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </ul>
       </nav>
 
-      <a class="logo-otn">
+      <a href="#" class="logo-otn">
         <!-- <img src="/images/logo-black.svg" alt="логотип с изображением оно тебе надо"> -->
       </a>
 
       <address class="address-otn">
-        <p class="font-list font-list__underlined">+9 999 555 5555</p>
-        <p class="font-list font-list__underlined">info@sobaka.ge</p>
+        <p class="font-list font-list__underlined"><a href="#">+9 999 555 5555</a></p>
+        <p class="font-list font-list__underlined"><a href="#">info@sobaka.ge</a></p>
         <p class="font-list">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       
@@ -41,11 +41,11 @@
       <!-- cover -->
 
       <section class="cover">
-        <h2 class="">
+        <h1 class="size-title-otn">
           <span class="">оно</span>
           <span class="">тебе</span>
           <span class="">надо</span>
-        </h2>
+        </h1>
         <div class="description">
           <p>Аукцион вещей, вкоторые никто не верил</p>
           <button class="btn-see-all-lots">сделать ставку</button>
@@ -101,14 +101,27 @@
       <!-- about-auction -->
 
       <section class="about-auction">
-        <div>
-          <img src="/images/logo-white.svg" alt="белый логотип с изображением оно тебе надо">
+        <div class="block-logo-white">
+          <!-- <img src="/images/logo-white.svg" alt="белый логотип с изображением оно тебе надо"> -->
         </div>
         <div>
           <h2 class="bold-title">Об аукционе</h2>
+
           <div>
-            <p class="font-main">Параграф 1.</p>
-            <p class="font-main">Параграф 2.</p>
+            <p class="font-main">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
+              Наши лоты вообще не должны были попасть ни на один аукцион. 
+              Потому что кому нужен дневник девочки-подростка или картина, 
+              которую может нарисовать даже ребёнок? 
+              Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+
+            <p class="font-main">Слишком сложные или, наоборот, слишком простые. 
+              Опережающие своё время. В пух и прах растерзанные критиками. 
+              Непринятые и непонятые. Когда-то они казались просто неудачными. 
+              Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить 
+              современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. 
+              И сейчас эти лоты стали культовыми.
+            </p>
           </div>
         </div>
       </section>
@@ -118,20 +131,20 @@
 
     <footer class="footer">
       <address class="address-otn">
-        <p class="font-list font-list__underlined">+9 999 555 5555</p>
-        <p class="font-list font-list__underlined">info@sobaka.ge</p>
+        <p class="font-list font-list__underlined"><a href="#">+9 999 555 5555</a></p>
+        <p class="font-list font-list__underlined"><a href="#">info@sobaka.ge</a></p>
         <p class="font-list">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
 
       <!-- menu-footer -->
 
-      <div class="menu-footer">
-        <ul class="list-no-marker">
-          <li class="font-list">главная</li>
-          <li class="font-list font-list__underlined">посмотреть лоты</li>
-          <li class="font-list font-list__underlined">об аукционе</li>
+      <nav class="menu-otn">
+        <ul class="list-marker-header">
+          <li><a href="#" class="font-list">главная</a></li>
+          <li><a href="#" class="font-list font-list__underlined">посмотреть лоты</a></li>
+          <li><a href="#" class="font-list font-list__underlined">об аукционе</a></li>
         </ul>
-      </div>
+      </nav>
 
       <!-- social-footer -->
 
