сверстанная секция cover

--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
       <!-- cover -->
 
       <section class="cover">
-        <h1 class="size-title-otn">
-          <span class="">оно</span>
-          <span class="">тебе</span>
-          <span class="">надо</span>
-        </h1>
+        <div class="overlay">
+          <h1 class="cover__size-title-otn">
+            <span class="cover__size-title-otn__start">оно</span>
+            <span class="cover__size-title-otn__center">тебе</span>
+            <span class="cover__size-title-otn__end">надо</span>
+          </h1>
 
-        <div class="description">
-          <p class="text-things">Аукцион вещей, вкоторые никто не верил</p>
-          <button class="btn-see-all-lots">сделать ставку</button>
+          <div class="description text-uppercase">
+            <p class="cover__text-things">Аукцион вещей, в которые никто не верил</p>
+            <button class="btn-see-all-lots">сделать ставку</button>
+          </div>
         </div>
       </section>
 
