--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css" />
-    <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
 
     <!-- header -->
 
     <header class="header">
-      <nav class="menu-otn">
+      <nav class="header__menu-otn">
         <ul class="list-marker-header font-list">
-          <li class="list-no-marker"><a href="#">главная</a></li>
-          <li><a href="#" class="font-list__underlined">посмотреть лоты</a></li>
-          <li class="list-marker-header-end"><a href="#" class="font-list__underlined">об аукционе</a></li>
+          <li class="list-no-marker"><a>главная</a></li>
+          <li><a href="#0" class="font-list__underlined">посмотреть лоты</a></li>
+          <li class="list-marker-header-end"><a href="#0" class="font-list__underlined">об аукционе</a></li>
         </ul>
       </nav>
 
       <a class="logo-otn">
-        <img src="/images/logo-black.svg" alt="логотип с изображением оно тебе надо">
+        <img 
+        src="/images/logo-black.svg" 
+        alt="логотип с изображением оно тебе надо"
+        >
       </a>
 
       <address class="address-otn font-list">
@@ -58,9 +61,9 @@
       <section class="cover">
         <div class="overlay">
           <h1 class="cover__size-title-otn">
-            <span class="cover__size-title-otn__start">оно</span>
-            <span class="cover__size-title-otn__center">тебе</span>
-            <span class="cover__size-title-otn__end">надо</span>
+            <span class="cover__spans">оно</span>
+            <span class="cover__spans cover__span__center">тебе</span>
+            <span class="cover__spans cover__span__end">надо</span>
           </h1>
 
           <div class="description text-uppercase">
@@ -76,7 +79,7 @@
         <h2 class="bold-title">лоты</h2>
         <ul class="list-no-marker">
           <li class="block-lots block-lots__film">
-            <a href="#">
+            <a href="#0">
               <article class="">
                 <h2 class="">Фильм режиссёра, который бросил киношколу</h2>
                 <p class="font-main">Не просто бросил, а ушёл с первой лекции. 
@@ -87,7 +90,7 @@
           </li>
 
           <li class="block-lots block-lots__book">
-            <a href="#">
+            <a href="#0">
               <article class="">
                 <h2 class="">Книга, где описан один скучный день из жизни рекламного агента</h2>
                 <p class="font-main">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
@@ -99,7 +102,7 @@
           </li>
 
           <li class="block-lots block-lots__picture">
-            <a href="#">
+            <a href="#0">
               <article class="">
                 <h2 class="">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
                 <p class="font-main">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
@@ -113,7 +116,7 @@
 
       <!-- about-lots -->
 
-        <a href="#" class="font-main font-list__underlined">Подробнее о лотах</a>
+        <a href="#0" class="font-main font-list__underlined">Подробнее о лотах</a>
       </section>
 
       <!-- about-auction -->
@@ -149,8 +152,13 @@
 
     <footer class="footer">
       <address class="address-otn font-list">
-        <p class="font-list__underlined"><a href="#">+9 999 555 5555</a></p>
-        <p class="font-list__underlined"><a href="#">info@sobaka.ge</a></p>
+        <p class="font-list__underlined">
+          <a class="font-list__underlined" 
+          href="tel:+99995555555">+9 999 555 5555</a>
+          <a class="font-list__underlined"
+           href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        </p>
+        
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
 
@@ -158,9 +166,9 @@
 
       <nav class="menu-otn">
         <ul class="font-list list-no-marker">
-          <li><a href="#">главная</a></li>
-          <li><a href="#" class="font-list__underlined">посмотреть лоты</a></li>
-          <li><a href="#" class="font-list__underlined">об аукционе</a></li>
+          <li><a href="#0">главная</a></li>
+          <li><a href="#0" class="font-list__underlined">посмотреть лоты</a></li>
+          <li><a href="#0" class="font-list__underlined">об аукционе</a></li>
         </ul>
       </nav>
 
