готовый код после внутренних тестов w3c, prettier и др

--- a/index.html
+++ b/index.html
@@ -44,28 +44,15 @@
 
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
-
-      <!-- <address class="address-otn font-list">
-        <p class="font-list__underlined">
-          <a href="tel:+99995555555">+9 999 555 5555</a>
-        </p>
-        <p class="font-list__underlined">
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        </p>
-        <p>наб. Принсенграхт 263- 265, Амстердам</p>
-      </address>  моя наработка-->
     </header>
 
     <!-- main -->
 
     <main class="main">
-      
       <!-- cover -->
 
       <section class="cover indent-block-big">
         <div class="overlay">
-          <!-- TODO: переделай overlay как карточках и z-index у заголовка
-          и текста с кнопкой -->
           <h1 class="cover__size-title-otn">
             <span class="cover__spans cover__span-start">оно</span>
             <span class="cover__spans cover__span-center">тебе</span>
@@ -142,10 +129,11 @@
 
         <!-- about-lots -->
 
-        <a href="#0" class="font-main font-list__underlined lots__look-more-link__link">
-          <p class="lots__look-more-link__p">
-            посмотреть больше
-          </p>
+        <a
+          href="#0"
+          class="font-main font-list__underlined lots__look-more-link__link"
+        >
+          <p class="lots__look-more-link__p">посмотреть больше</p>
         </a>
       </section>
 
@@ -154,7 +142,10 @@
       <section class="about-auction indent-block-big">
         <section class="block-logo-white">
           <div class="block-logo-white__black-background">
-            <img src="/images/logo-white.svg" alt="белый логотип с изображением оно тебе надо">
+            <img
+              src="/images/logo-white.svg"
+              alt="белый логотип с изображением оно тебе надо"
+            />
           </div>
         </section>
 
@@ -206,25 +197,49 @@
         <ul class="footer__menu-list font-list list-no-marker">
           <li><a class="footer__menu-list-item" href="#0">главная</a></li>
           <li>
-            <a class="footer__menu-list-item font-list__underlined" href="#0" class="font-list__underlined">посмотреть лоты</a>
+            <a class="footer__menu-list-item font-list__underlined" href="#0"
+              >посмотреть лоты</a
+            >
           </li>
-          <li><a class="footer__menu-list-item font-list__underlined" href="#0" class="font-list__underlined">об аукционе</a></li>
+          <li>
+            <a class="footer__menu-list-item font-list__underlined" href="#0"
+              >об аукционе</a
+            >
+          </li>
         </ul>
       </nav>
 
       <!-- footer__social-list-item -->
 
-        <ul class="footer__social-list-item list-no-marker">
-          <li><a href="#0" class="footer__social-link">
-            <img class="footer__social-icon" src="./images/yt.svg" alt="круглая иконка ютуба">
-          </a></li>
-          <li><a href="#0" class="footer__social-link">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="круглая иконка вконтакте">
-          </a></li>
-          <li><a href="#0" class="footer__social-link">
-            <img class="footer__social-icon" src="./images/pinterest.svg" alt="круглая иконка пинтерест">
-          </a></li>
-        </ul>
+      <ul class="footer__social-list-item list-no-marker">
+        <li>
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="круглая иконка ютуба"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="круглая иконка вконтакте"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="круглая иконка пинтерест"
+            />
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
